# mcp-flowise

./: .env.example  .gitignore  README.md  index.js  install.js  package.json  pyproject.toml  smithery.yaml
mcp_flowise/: __init__.py  server.py
web-docs/: index.html
