[project]
name = "mcp-flowise"
version = "0.1.5"
description = "MCP server exposing local Flowise chatflows as callable tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-flowise = "mcp_flowise.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_flowise"]
